added separate buttons for each 1000 range

--- a/index.htm
+++ b/index.htm
@@ -4,7 +4,7 @@
 <title>RandomSCP.htm</title>
 <link href=../common/css/core.css rel=stylesheet>
 
-<input id=generate type=button value="Open Random SCP Article in New Tab [ENTER]">
+<table id=buttons></table>
 
 <script src=../common/js/core.js></script>
 <script src=js/main.js></script>
