added enter keybind back in

--- a/index.htm
+++ b/index.htm
@@ -4,7 +4,11 @@
 <title>RandomSCP.htm</title>
 <link href=../common/css/core.css rel=stylesheet>
 
-<table id=buttons></table>
+<table>
+  <tbody id=buttons>
+    <tr>
+      <td><input id=generate type=button value="Open Random SCP Article [ENTER]">
+</table>
 
 <script src=../common/js/core.js></script>
 <script src=js/main.js></script>
