--- a/index.htm
+++ b/index.htm
@@ -7,7 +7,7 @@
 <table>
   <tbody id=buttons>
     <tr>
-      <td><input id=generate type=button value="Open Random SCP Article [ENTER]">
+      <td><input id=generate type=button value="Open Random SCP Article [H]">
 </table>
 
 <script src=../common/js/core.js></script>
