changed buttons to links

--- a/index.htm
+++ b/index.htm
@@ -5,9 +5,9 @@
 <link href=../common/css/core.css rel=stylesheet>
 
 <table>
-  <tbody id=buttons>
+  <tbody id=links>
     <tr>
-      <td><input id=generate type=button value="Open Random SCP Article [1]">
+      <td><a class=external id=generate>Open Random SCP Article [1]</a>
 </table>
 
 <script src=../common/js/core.js></script>
