added dummy href for tab focus

--- a/index.htm
+++ b/index.htm
@@ -7,7 +7,7 @@
 <table>
   <tbody id=links>
     <tr>
-      <td><a class=external id=generate>Open Random SCP Article [1]</a>
+      <td><a class=external href=javascript:; id=generate>Open Random SCP Article [1]</a>
 </table>
 
 <script src=../common/js/core.js></script>
